--- a/mysite/templates/blog/base.html
+++ b/mysite/templates/blog/base.html
@@ -46,6 +46,18 @@
          </li>
          {% endfor %}
       </ul>
+      {% if user.is_authenticated %}
+      Hi {{ user.username }}!
+      <p><a href="{% url 'users-profile' %}">My profile</a></p>
+      <form action="{% url 'logout' %}" method="post">
+          {% csrf_token %}
+          <a href="#" onclick="parentNode.submit();">Log Out</a>
+      </form>
+  {% else %}
+      <p>You are not logged in</p>
+      <p><a href="{% url 'login' %}">Log In</a></p>
+      <p><a href="{% url 'password_reset' %}">Forgot your password?</a></p>
+  {% endif %}
    </div>
 </body>
 </html>
